--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,7 @@
 en:
   button_sign_in: Sign in
   button_account: Account
+  button_profile: Profile
   button_sign_out: Sign out
+
+  button_repositories: Repositories
