--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,7 @@ en:
   button_account: Account
   button_profile: Profile
   button_sign_out: Sign out
+  button_connect: Connect
 
   button_repositories: Repositories
 
