redirect to top page when omniauth failure

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,3 +11,5 @@ en:
   label_image: Image
   label_user_name: User name
   label_user_nickname: Nickname
+
+  error_authentication_failed: Authentication failed
