--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,6 +7,7 @@ en:
 
   button_repositories: Repositories
 
+  label_api_key: API Key
   label_provider: Provider
   label_image: Image
   label_user_name: User name
