Added: user activities page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,7 @@ en:
   button_profile: Profile
   button_sign_out: Sign out
   button_connect: Connect
+  button_user_activity: User Activity
 
   button_repositories: Repositories
 
